// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tabs > should render empty tabs 1`] = `
<div>
  <div
    aria-label="tabs"
    data-align="start"
    data-orientation="horizontal"
    data-position="before"
    data-tabs-root=""
    role="tablist"
    tabindex="0"
  >
    <div
      data-tabs-list=""
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      data-tabs-content=""
      role="tabpanel"
    >
      <div
        data-empty=""
      >
        No tabs available.
        <!---->
      </div>
      <!---->
    </div>
  </div>
  
</div>
`;

exports[`Tabs > should render simple tabs with string array 1`] = `
<div>
  <div
    aria-label="tabs"
    class="custom-class"
    data-align="start"
    data-orientation="horizontal"
    data-position="before"
    data-tabs-root=""
    role="tablist"
    tabindex="0"
  >
    <div
      data-tabs-list=""
    >
      <div
        aria-controls="tab-panel-0"
        aria-selected="false"
        data-path="0"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 1
        <!---->
         
        <!---->
      </div>
      <div
        aria-controls="tab-panel-1"
        aria-selected="false"
        data-path="1"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 2
        <!---->
         
        <!---->
      </div>
      <div
        aria-controls="tab-panel-2"
        aria-selected="false"
        data-path="2"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 3
        <!---->
         
        <!---->
      </div>
      <!---->
       
      <!---->
    </div>
     
    <div
      data-tabs-content=""
      role="tabpanel"
    >
      <div
        data-placeholder=""
      >
        Select a tab to view its content.
      </div>
      <!---->
    </div>
  </div>
  
</div>
`;

exports[`Tabs > should render simple tabs with string array 2`] = `
<div>
  <div
    aria-label="tabs"
    class="another-class"
    data-align="start"
    data-orientation="horizontal"
    data-position="before"
    data-tabs-root=""
    role="tablist"
    tabindex="0"
  >
    <div
      data-tabs-list=""
    >
      <div
        aria-controls="tab-panel-0"
        aria-selected="false"
        data-path="0"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 1
        <!---->
         
        <!---->
      </div>
      <div
        aria-controls="tab-panel-1"
        aria-selected="false"
        data-path="1"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 2
        <!---->
         
        <!---->
      </div>
      <div
        aria-controls="tab-panel-2"
        aria-selected="false"
        data-path="2"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 3
        <!---->
         
        <!---->
      </div>
      <!---->
       
      <!---->
    </div>
     
    <div
      data-tabs-content=""
      role="tabpanel"
    >
      <div
        data-placeholder=""
      >
        Select a tab to view its content.
      </div>
      <!---->
    </div>
  </div>
  
</div>
`;

exports[`Tabs > should render tabs with object array 1`] = `
<div>
  <div
    aria-label="tabs"
    class="custom-class"
    data-align="start"
    data-orientation="horizontal"
    data-position="before"
    data-tabs-root=""
    role="tablist"
    tabindex="0"
  >
    <div
      data-tabs-list=""
    >
      <div
        aria-controls="tab-panel-0"
        aria-selected="false"
        data-path="0"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 1
        <!---->
         
        <!---->
      </div>
      <div
        aria-controls="tab-panel-1"
        aria-selected="false"
        data-path="1"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 2
        <!---->
         
        <!---->
      </div>
      <div
        aria-controls="tab-panel-2"
        aria-selected="false"
        data-path="2"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 3
        <!---->
         
        <!---->
      </div>
      <div
        aria-controls="tab-panel-3"
        aria-selected="false"
        data-path="3"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 4
        <!---->
         
        <!---->
      </div>
      <!---->
       
      <!---->
    </div>
     
    <div
      data-tabs-content=""
      role="tabpanel"
    >
      <div
        data-placeholder=""
      >
        Select a tab to view its content.
      </div>
      <!---->
    </div>
  </div>
  
</div>
`;

exports[`Tabs > should render with custom content snippet 1`] = `
<div>
  <!---->
  <!---->
   
  <div
    aria-label="tabs"
    data-align="start"
    data-orientation="horizontal"
    data-position="before"
    data-tabs-root=""
    role="tablist"
    tabindex="0"
  >
    <div
      data-tabs-list=""
    >
      <div
        aria-controls="tab-panel-0"
        aria-selected="false"
        data-path="0"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 1
        <!---->
         
        <!---->
      </div>
      <div
        aria-controls="tab-panel-1"
        aria-selected="false"
        data-path="1"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 2
        <!---->
         
        <!---->
      </div>
      <div
        aria-controls="tab-panel-2"
        aria-selected="false"
        data-path="2"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 3
        <!---->
         
        <!---->
      </div>
      <div
        aria-controls="tab-panel-3"
        aria-selected="false"
        data-path="3"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 4
        <!---->
         
        <!---->
      </div>
      <!---->
       
      <!---->
    </div>
     
    <div
      data-tabs-content=""
      role="tabpanel"
    >
      <div
        data-placeholder=""
      >
        Select a tab to view its content.
      </div>
      <!---->
    </div>
  </div>
  <!---->
   
  <!---->
   
  <!---->
  
</div>
`;

exports[`Tabs > should render with custom empty state 1`] = `
<div>
  <!---->
  <!---->
   
  <!---->
   
  <div
    aria-label="tabs"
    data-align="start"
    data-orientation="horizontal"
    data-position="before"
    data-tabs-root=""
    role="tablist"
    tabindex="0"
  >
    <div
      data-tabs-list=""
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      data-tabs-content=""
      role="tabpanel"
    >
      <div
        data-empty=""
      >
        <div
          class="custom-empty-state"
        >
          Custom empty state - No tabs available here!
        </div>
        <!---->
      </div>
      <!---->
    </div>
  </div>
  <!---->
   
  <!---->
  
</div>
`;

exports[`Tabs > should render with custom header snippet 1`] = `
<div>
  <!---->
  <div
    aria-label="tabs"
    data-align="start"
    data-orientation="horizontal"
    data-position="before"
    data-tabs-root=""
    role="tablist"
    tabindex="0"
  >
    <div
      data-tabs-list=""
    >
      <div
        aria-controls="tab-panel-0"
        aria-selected="false"
        data-path="0"
        data-tabs-trigger=""
        role="tab"
      >
        <div
          class="custom-tab-header"
        >
          Custom: Tab 1
        </div>
        <!---->
         
        <!---->
      </div>
      <div
        aria-controls="tab-panel-1"
        aria-selected="false"
        data-path="1"
        data-tabs-trigger=""
        role="tab"
      >
        <div
          class="custom-tab-header"
        >
          Custom: Tab 2
        </div>
        <!---->
         
        <!---->
      </div>
      <div
        aria-controls="tab-panel-2"
        aria-selected="false"
        data-path="2"
        data-tabs-trigger=""
        role="tab"
      >
        <div
          class="custom-tab-header"
        >
          Custom: Tab 3
        </div>
        <!---->
         
        <!---->
      </div>
      <div
        aria-controls="tab-panel-3"
        aria-selected="false"
        data-path="3"
        data-tabs-trigger=""
        role="tab"
      >
        <div
          class="custom-tab-header"
        >
          Custom: Tab 4
        </div>
        <!---->
         
        <!---->
      </div>
      <!---->
       
      <!---->
    </div>
     
    <div
      data-tabs-content=""
      role="tabpanel"
    >
      <div
        data-placeholder=""
      >
        Select a tab to view its content.
      </div>
      <!---->
    </div>
  </div>
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
  
</div>
`;

exports[`Tabs > should render with different alignments 1`] = `
<div>
  <div
    aria-label="tabs"
    data-align="center"
    data-orientation="horizontal"
    data-position="before"
    data-tabs-root=""
    role="tablist"
    tabindex="0"
  >
    <div
      data-tabs-list=""
    >
      <div
        aria-controls="tab-panel-0"
        aria-selected="false"
        data-path="0"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 1
        <!---->
         
        <!---->
      </div>
      <div
        aria-controls="tab-panel-1"
        aria-selected="false"
        data-path="1"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 2
        <!---->
         
        <!---->
      </div>
      <div
        aria-controls="tab-panel-2"
        aria-selected="false"
        data-path="2"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 3
        <!---->
         
        <!---->
      </div>
      <div
        aria-controls="tab-panel-3"
        aria-selected="false"
        data-path="3"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 4
        <!---->
         
        <!---->
      </div>
      <!---->
       
      <!---->
    </div>
     
    <div
      data-tabs-content=""
      role="tabpanel"
    >
      <div
        data-placeholder=""
      >
        Select a tab to view its content.
      </div>
      <!---->
    </div>
  </div>
  
</div>
`;

exports[`Tabs > should render with different positions 1`] = `
<div>
  <div
    aria-label="tabs"
    data-align="start"
    data-orientation="horizontal"
    data-position="after"
    data-tabs-root=""
    role="tablist"
    tabindex="0"
  >
    <div
      data-tabs-list=""
    >
      <div
        aria-controls="tab-panel-0"
        aria-selected="false"
        data-path="0"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 1
        <!---->
         
        <!---->
      </div>
      <div
        aria-controls="tab-panel-1"
        aria-selected="false"
        data-path="1"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 2
        <!---->
         
        <!---->
      </div>
      <div
        aria-controls="tab-panel-2"
        aria-selected="false"
        data-path="2"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 3
        <!---->
         
        <!---->
      </div>
      <div
        aria-controls="tab-panel-3"
        aria-selected="false"
        data-path="3"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 4
        <!---->
         
        <!---->
      </div>
      <!---->
       
      <!---->
    </div>
     
    <div
      data-tabs-content=""
      role="tabpanel"
    >
      <div
        data-placeholder=""
      >
        Select a tab to view its content.
      </div>
      <!---->
    </div>
  </div>
  
</div>
`;

exports[`Tabs > should render with editable tabs 1`] = `
<div>
  <div
    aria-label="tabs"
    data-align="start"
    data-orientation="horizontal"
    data-position="before"
    data-tabs-root=""
    role="tablist"
    tabindex="0"
  >
    <div
      data-tabs-list=""
    >
      <div
        aria-controls="tab-panel-0"
        aria-selected="false"
        data-path="0"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 1
        <!---->
         
        <icon
          aria-checked="false"
          aria-label="action-close"
          data-disabled="false"
          data-icon-remove="true"
          data-size="base"
          data-tag-button="true"
          data-tag-icon="true"
          role="button"
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class="action-close"
          />
          <!---->
        </icon>
        <!---->
      </div>
      <div
        aria-controls="tab-panel-1"
        aria-selected="false"
        data-path="1"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 2
        <!---->
         
        <icon
          aria-checked="false"
          aria-label="action-close"
          data-disabled="false"
          data-icon-remove="true"
          data-size="base"
          data-tag-button="true"
          data-tag-icon="true"
          role="button"
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class="action-close"
          />
          <!---->
        </icon>
        <!---->
      </div>
      <div
        aria-controls="tab-panel-2"
        aria-selected="false"
        data-path="2"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 3
        <!---->
         
        <icon
          aria-checked="false"
          aria-label="action-close"
          data-disabled="false"
          data-icon-remove="true"
          data-size="base"
          data-tag-button="true"
          data-tag-icon="true"
          role="button"
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class="action-close"
          />
          <!---->
        </icon>
        <!---->
      </div>
      <div
        aria-controls="tab-panel-3"
        aria-selected="false"
        data-path="3"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 4
        <!---->
         
        <icon
          aria-checked="false"
          aria-label="action-close"
          data-disabled="false"
          data-icon-remove="true"
          data-size="base"
          data-tag-button="true"
          data-tag-icon="true"
          role="button"
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class="action-close"
          />
          <!---->
        </icon>
        <!---->
      </div>
      <!---->
       
      <icon
        aria-checked="false"
        aria-label="action-add"
        data-disabled="false"
        data-icon-add="true"
        data-size="base"
        data-tag-button="true"
        data-tag-icon="true"
        role="button"
        tabindex="0"
      >
        <i
          aria-hidden="true"
          class="action-add"
        />
        <!---->
      </icon>
      <!---->
    </div>
     
    <div
      data-tabs-content=""
      role="tabpanel"
    >
      <div
        data-placeholder=""
      >
        Select a tab to view its content.
      </div>
      <!---->
    </div>
  </div>
  
</div>
`;

exports[`Tabs > should render with field mapping 1`] = `
<div>
  <div
    aria-label="tabs"
    data-align="start"
    data-orientation="horizontal"
    data-position="before"
    data-tabs-root=""
    role="tablist"
    tabindex="0"
  >
    <div
      data-tabs-list=""
    >
      <div
        aria-controls="tab-panel-0"
        aria-selected="false"
        data-path="0"
        data-tabs-trigger=""
        role="tab"
      >
        First
        <!---->
         
        <!---->
      </div>
      <div
        aria-controls="tab-panel-1"
        aria-selected="false"
        data-path="1"
        data-tabs-trigger=""
        role="tab"
      >
        Second
        <!---->
         
        <!---->
      </div>
      <!---->
       
      <!---->
    </div>
     
    <div
      data-tabs-content=""
      role="tabpanel"
    >
      <div
        data-placeholder=""
      >
        Select a tab to view its content.
      </div>
      <!---->
    </div>
  </div>
  
</div>
`;

exports[`Tabs > should render with horizontal orientation 1`] = `
<div>
  <div
    aria-label="tabs"
    data-align="start"
    data-orientation="horizontal"
    data-position="before"
    data-tabs-root=""
    role="tablist"
    tabindex="0"
  >
    <div
      data-tabs-list=""
    >
      <div
        aria-controls="tab-panel-0"
        aria-selected="false"
        data-path="0"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 1
        <!---->
         
        <!---->
      </div>
      <div
        aria-controls="tab-panel-1"
        aria-selected="false"
        data-path="1"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 2
        <!---->
         
        <!---->
      </div>
      <div
        aria-controls="tab-panel-2"
        aria-selected="false"
        data-path="2"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 3
        <!---->
         
        <!---->
      </div>
      <div
        aria-controls="tab-panel-3"
        aria-selected="false"
        data-path="3"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 4
        <!---->
         
        <!---->
      </div>
      <!---->
       
      <!---->
    </div>
     
    <div
      data-tabs-content=""
      role="tabpanel"
    >
      <div
        data-placeholder=""
      >
        Select a tab to view its content.
      </div>
      <!---->
    </div>
  </div>
  
</div>
`;

exports[`Tabs > should render with selected value 1`] = `
<div>
  <div
    aria-label="tabs"
    data-align="start"
    data-orientation="horizontal"
    data-position="before"
    data-tabs-root=""
    role="tablist"
    tabindex="0"
  >
    <div
      data-tabs-list=""
    >
      <div
        aria-controls="tab-panel-0"
        aria-selected="false"
        data-path="0"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 1
        <!---->
         
        <!---->
      </div>
      <div
        aria-controls="tab-panel-1"
        aria-selected="true"
        class="selected focused"
        data-path="1"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 2
        <!---->
         
        <!---->
      </div>
      <div
        aria-controls="tab-panel-2"
        aria-selected="false"
        data-path="2"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 3
        <!---->
         
        <!---->
      </div>
      <div
        aria-controls="tab-panel-3"
        aria-selected="false"
        data-path="3"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 4
        <!---->
         
        <!---->
      </div>
      <!---->
       
      <!---->
    </div>
     
    <div
      data-tabs-content=""
      role="tabpanel"
    >
      <!---->
      <div
        data-tab-content-default=""
      >
        
      </div>
      
      <!---->
    </div>
  </div>
  
</div>
`;

exports[`Tabs > should render with vertical orientation 1`] = `
<div>
  <div
    aria-label="tabs"
    data-align="start"
    data-orientation="vertical"
    data-position="before"
    data-tabs-root=""
    role="tablist"
    tabindex="0"
  >
    <div
      data-tabs-list=""
    >
      <div
        aria-controls="tab-panel-0"
        aria-selected="false"
        data-path="0"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 1
        <!---->
         
        <!---->
      </div>
      <div
        aria-controls="tab-panel-1"
        aria-selected="false"
        data-path="1"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 2
        <!---->
         
        <!---->
      </div>
      <div
        aria-controls="tab-panel-2"
        aria-selected="false"
        data-path="2"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 3
        <!---->
         
        <!---->
      </div>
      <div
        aria-controls="tab-panel-3"
        aria-selected="false"
        data-path="3"
        data-tabs-trigger=""
        role="tab"
      >
        Tab 4
        <!---->
         
        <!---->
      </div>
      <!---->
       
      <!---->
    </div>
     
    <div
      data-tabs-content=""
      role="tabpanel"
    >
      <div
        data-placeholder=""
      >
        Select a tab to view its content.
      </div>
      <!---->
    </div>
  </div>
  
</div>
`;
